[package]
name = "procy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_vector_shapes = "0.9.3"
flat_spatial = "0.6.1"
image = "0.25.5"
imageproc = "0.25.0"
itertools = "0.14.0"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", version = "0.4.0-rc.1" }
ndarray = { version = "0.16.1", features = ["rayon"] }
petgraph = { version = "0.7.0", features = ["generate", "rayon"] }
rand = "0.8.5"
tracing = "0.1.41"
tracing-tracy = "0.11.4"
tracy-client = "0.18.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
